--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="about-section">
 
          <div class="img-b">
-            <img src="./protfolio-img/Features-of-Mern-stack-development-services-You-Should-Know.webp">
+            <img src="./protfolio-img/download.jfif">
          </div>
 
          <div class="text-2">
@@ -118,7 +118,7 @@
 
                <div class="contact">
                   <h1>Phone:</h1>
-                  <h1>01********;</h1>
+                  <h1>+8801675886072;</h1>
                   <h1>01++++++++++</h1>
                   <p>Feel free to call me anytime to hire me</p>
                </div>
