--- a/index.html
+++ b/index.html
@@ -119,13 +119,13 @@
                <div class="contact">
                   <h1>Phone:</h1>
                   <h1>+8801675886072;</h1>
-                  <h1>01++++++++++</h1>
+
                   <p>Feel free to call me anytime to hire me</p>
                </div>
 
                <div class="contact">
                   <h1>Mail:</h1>
-                  <h1>abcdefghdsfjhjd<br>@gmail.com;</h1>
+                  <h1>shahrear.prolific<br>@gmail.com;</h1>
 
                   <p>Feel free to mail me anytime to hire me</p>
                </div>
@@ -135,7 +135,7 @@
                   <h1>Block-F, Road-8<br>
                      Nicaton- Dhaka,</h1>
 
-                  <p>Feel free to call me anytime to hire me</p>
+                  <!-- <p>Feel free to call me anytime to hire me</p> -->
                </div>
 
             </div>
