--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                <div class="contact">
                   <h1>Phone:</h1>
                   <h1>+8801675886072;</h1>
-
+                  <p>-</p>
                   <p>Feel free to call me anytime to hire me</p>
                </div>
 
@@ -134,7 +134,7 @@
                   <h1>Location:</h1>
                   <h1>Block-F, Road-8<br>
                      Nicaton- Dhaka,</h1>
-                  <p></p>
+                  <p>Feel free to contact me anytime to hire me</p>
                   <!-- <p>Feel free to call me anytime to hire me</p> -->
                </div>
 
