--- a/index.html
+++ b/index.html
@@ -13,23 +13,22 @@
 
    <div class="main-content">
 
+      <!-- sectino-1 start -->
 
       <div class="navber">
          <div> </div>
 
-         <div>
+         <div class="link">
             <a>About</a>
             <a>Work</a>
             <a>Portfolio</a>
             <a>Contact</a>
          </div>
-
       </div>
 
 
-
+      <!-- sectino-2 start -->
       <div class="flex-1">
-
 
          <div class="text-1">
             <h1>HELLO, I'M <br>
@@ -38,17 +37,15 @@
             <p>Senior Software Engineer <br>
                (Team Lead) </p>
 
-
             <button class="button-1">Hire Me</button>
          </div>
 
          <div class="img-a">
             <img src="./protfolio-img/1591719871597.jfif">
          </div>
-
-
       </div>
 
+      <!-- sectino-3 start -->
 
       <div class="about-section">
 
@@ -64,6 +61,7 @@
          </div>
       </div>
 
+      <!-- sectino-4 start -->
 
       <div class="card-section">
          <h1><span>Work</span> Experience</h1>
@@ -73,7 +71,7 @@
             <div class="card">
                <img src="./protfolio-img/4.png">
                <h2>Node.js</h2>
-               <p> Senior Software Engineer (Team Lead) at Prolific Info Tech </p>
+               <p> Senior Software Engineer (Team Lead) at Prolific Info Tech. </p>
             </div>
 
 
@@ -92,7 +90,7 @@
          </div>
       </div>
 
-
+      <!-- sectino-5 start -->
       <div class="box-section">
          <div class="box">
             <div class="box-text">
@@ -104,22 +102,19 @@
             </div>
          </div>
 
-
-
-
+         <!-- sectino-6 start -->
          <div class="contact-div">
 
             <div class="header">
                <h1>CONTACT ME</h1>
             </div>
 
-
             <div class="contact-flex">
 
                <div class="contact">
                   <h1>Phone:</h1>
                   <h1>+8801675886072;</h1>
-                    -
+                  -
                   <p>Feel free to call me anytime to hire me</p>
                </div>
 
@@ -142,7 +137,7 @@
 
          </div>
 
-
+         <!-- sectino-7 start -->
          <div class="footer">
             <div class="footer-flex">
 
@@ -157,14 +152,12 @@
                <div class="f-img">
                   <img src="./protfolio-img/3.png">
                </div>
-
             </div>
 
             <h3>© Shahrear Kabir , all rights reserved.</h3>
-
          </div>
-
       </div>
+
    </div>
 </body>
 
